fix: changing the names (#278)
* fix: changing the nams

1. Removed Astra on all the pages, as well as the logo.
2. Changed the ./playground folder to ./frontend
3. Changed the prompt from "astra agent connected" to "ten agent connected"

* fix: astra agent to ten agent

* fix: changing the folder name back to playground

The change of PR is too big, hard to audit, splitting it into 2 PRs.

* fix: update the greetings and keep the format.

--- a/playground/src/components/loginCard/index.module.scss
+++ b/playground/src/components/loginCard/index.module.scss
@@ -39,19 +39,20 @@
   .content {
 
     .title {
-      margin-bottom: 32px;
+      color: white;
+      font-weight: bold;
+      font-size: 25px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 12px;
 
       .text {
-        margin-top: 8px;
         color: var(--Grey-300, #EAECF0);
         text-align: center;
         font-size: 18px;
         font-weight: 500;
+        margin-bottom: 40px;
       }
     }
 
